--- a/demo/style.css
+++ b/demo/style.css
@@ -1,27 +1,29 @@
-#semantic-tabs {
+.semantic-tabs {
     border: 2px solid #555;
     border-radius: 4px;
     font-family: Helvetica, Arial, sans-serif;
+    margin-top: 30px;
 }
 
-#semantic-tabs-heads {
+.semantic-tabs:first-child {
+    margin-top: 0;
+}
+
+.semantic-tabs-heads {
+    background: #555;
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-#semantic-tabs-heads {
-    background: #555;
-}
-
-#semantic-tabs-heads li {
+.semantic-tabs-heads li {
     color: #fff;
     cursor: pointer;
     padding: 10px 15px;
 }
 
-#semantic-tabs-heads li.active {
+.semantic-tabs-heads li.active {
     color: #000;
     background: #fff;
 }
